--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -60,11 +60,10 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
-  transition:
-    color 0.5s,
-    background-color 0.5s;
+  color: black;
+  background: white;
+ /* transition:
+    opacity 0.5 2s;*/
   line-height: 1.6;
   font-family:
     Inter,
@@ -83,4 +82,6 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+    width: 100%;
 }
